load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "core_proto",
    srcs = ["authzed/api/v1/core.proto"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_proto",
    ],
)

go_proto_library(
    name = "core_go_proto",
    importpath = "github.com/authzed/authzed-go/proto/authzed/api/v1",
    proto = ":core_proto",
    visibility = ["//visibility:public"],
    deps = [
	"@com_envoyproxy_protoc_gen_validate//validate:go_default_library",
    ],
)

proto_library(
    name = "permission_service_proto",
    srcs = ["authzed/api/v1/permission_service.proto"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_proto",
	"@com_google_googleapis//google/api:annotations_proto",
	":core_proto",
    ],
)

cc_proto_library(
    name = "permission_service_cc_proto",
    deps = [":permission_service_proto"],
)

cc_grpc_library(
    name = "permission_service_cc_grpc",
    srcs = [":permission_service_proto"],
    deps = [":permission_service_cc_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
)


go_proto_library(
    name = "permission_service_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/authzed/authzed-go/proto/authzed/api/v1",
    proto = ":permission_service_proto",
    deps = [
        ":core_go_proto",
        "@org_golang_google_genproto//googleapis/api/annotations:go_default_library",
	"@com_envoyproxy_protoc_gen_validate//validate:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "v1_proto",
    srcs = [
        "authzed/api/v1/core.proto",
        "authzed/api/v1/permission_service.proto",
    ],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_proto",
	"@com_google_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/authzed/authzed-go/proto/authzed/api/v1",
    proto = ":v1_proto",
    deps = [
	"@com_google_googleapis//google/api:annotations_go_proto",
	"@com_envoyproxy_protoc_gen_validate//validate:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
